client/src/components/Header/components/universal-nav.css
/* ... */
.nav-link-flex {
  display: flex;
  justify-content: space-between;
}

.nav-link-sign-in {
  display: none;
}

.nav-link-dull {
  color: var(--gray-45);
}

.nav-skeleton {
  height: var(--header-height);
  margin-right: 15px;
  width: 350px;
}

.nav-list .fcc-loader {
  padding: 0 40px;
  margin-left: 35px;
  margin-right: 25px;
}

.toggle-button-nav {
  padding: 2px 14px;
  border: 1px solid var(--gray-00);
  font-family: 'lato', sans-serif;
  font-size: 18px;
  color: var(--gray-00);
  background-color: var(--theme-color);
  cursor: pointer;
  max-height: calc(var(--header-height) - 8px);
  margin-right: 10px;
  display: flex;
  align-items: center;
}

.toggle-button-nav:hover {
  background-color: var(--theme-color);
  color: var(--gray-00);
  border: 1px solid var(--gray-00);
}

.toggle-button-nav:focus {
  outline: 3px solid var(--blue-mid);
  outline-offset: 0;
}

.toggle-button-nav:focus:not(:focus-visible) {
  outline: none;
}

.avatar-nav-link {
  display: block;
  height: 31px;
  width: 31px;
}

.avatar-nav-link:hover,
.avatar-nav-link:focus {
  background-color: var(--theme-color);
}

.avatar-nav-link .avatar-container {
  height: 100%;
}

.avatar-nav-link .avatar-container svg,
.avatar-nav-link .avatar-container img {
  height: 100%;
  object-fit: cover;
  width: 100%;
}

.gold-border {
  border: 2px solid var(--yellow-gold);
}

.blue-border {
  border: 2px solid var(--blue-mid);
}

.purple-border {
  border: 2px solid var(--purple-mid);
}

.default-border {
  border: 2px solid var(--gray-15);
}

.expand-nav {
  height: var(--header-height);
}

.display-menu {
  display: inherit;
  text-align: left;
  margin-top: calc(-1 * var(--header-height));
  max-height: calc(100vh - var(--header-height));
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.expand-lang-menu .display-menu {
  overflow-y: unset;
}

.display-menu::-webkit-scrollbar {
  display: none;
}

.reverse-toggle-color {
  background-color: var(--gray-00);
  color: var(--theme-color);
}

.reverse-toggle-color:hover {
  background-color: var(--gray-00);
  color: var(--theme-color);
}

.nav-line {
  border-top: 0.1rem solid var(--gray-45);
}

.nav-line-2 {
  border-color: var(--gray-45);
  width: 100%;
  margin: 0;
  border-top-width: 2px;
}

.signup-btn {
  max-height: calc(var(--header-height) - 6px);
  padding: 4px 12px;
  margin-left: 2px;
  font-family: 'Hack-ZeroSlash', monospace !important;
  display: flex;
  align-items: center;
  justify-content: center;

  background-color: transparent !important;
  border: 1px solid #fff !important;
  color: #fff !important;
}

.donate-btn {
  max-height: calc(var(--header-height) - 6px);
  padding: 4px 12px;
  margin-left: 12px;
  font-family: 'Hack-ZeroSlash', monospace !important;
  display: flex;
  align-items: center;
  justify-content: center;
}

.universal-nav-right .fcc_searchBar {
  position: absolute;
  top: 0;
  left: 0;
}

.universal-nav-right .fcc_searchBar .ais-SearchBox-form {
  width: 100vw;
  height: var(--search-box-form);
  max-width: unset;
  padding: 0 15px;
  left: 0;
}

/* In mobile layout, prevent search input from hanging around if the
   menu is collapsed. */
.universal-nav-right
  #toggle-button-nav[aria-expanded='false']
  + .fcc_searchBar
  .ais-SearchBox-form {
  display: none;
}

/* In mobile layout, prevent search results from hanging around if the
   menu is collapsed. */
.universal-nav-right
  #toggle-button-nav[aria-expanded='false']
  + .fcc_searchBar
  .ais-Hits {
  display: none;
}

.universal-nav-right .ais-SearchBox-input {
  width: calc(100vw - 17rem);
  padding-left: 27px;
}

.universal-nav-right .fcc_searchBar .ais-Hits {
  width: calc(100vw - 17rem);
}

.universal-nav-right .fcc_searchBar .ais-SearchBox-submit {
  top: unset;
  margin-top: 19px;
  left: 18px;
}

.ais-SearchBox-input:focus {
  outline: 3px solid var(--blue-mid);
}

.ais-SearchBox-submit:focus {
  outline: 3px solid var(--blue-mid);
}

.ais-SearchBox-submit:focus:not(:focus-visible) {
  outline: none;
}

#toggle-button-nav .menu-btn-icon,
#universal-nav .login-btn-icon {
  display: inline-block;
}

#toggle-button-nav .menu-btn-text,
.login-btn-text {
  display: none;
}

@media (max-width: 1200px) {
  .universal-nav-middle {
    flex: 1 0 25%;
  }
}

@media (max-width: 980px) {
  .universal-nav-middle {
    flex: none;
  }

  .display-search {
    display: initial;
  }

  .universal-nav-right {
    flex: 1 0 0;
    display: flex;
    justify-content: flex-end;
  }

  .fcc_searchBar .ais-SearchBox-form {
    display: flex;
    position: absolute;
    top: var(--header-height);
    left: 15px;
    max-width: calc(100vw - 350px);
  }

  #universal-nav-logo {
    display: flex;
    position: absolute;
    left: 17px;
    top: 0;
  }

  .expand-nav {
    min-height: calc(2 * var(--header-height));
  }
}

@media (max-width: 780px) {
  .exposed-nav {
    display: none;
  }
  .exposed-nav-items-menu {
    display: list-item;
  }
}

@media (max-width: 600px) {
  .nav-list {
    min-width: 100%;
    top: calc(var(--header-height) * 2);
    margin-top: 0;
  }

  .fcc_searchBar,
  .fcc_searchBar div {
    width: 100%;
  }

  .universal-nav-right .fcc_searchBar .ais-SearchBox-form {
    width: 100%;
  }

  .display-menu {
    max-height: calc(100vh - var(--header-height) * 2);
  }

  .universal-nav-right .ais-SearchBox-input {
    width: calc(100vw - 30px);
  }

  .universal-nav-right .fcc_searchBar .ais-Hits {
    width: calc(100% - 30px);
  }
  #universal-nav .signup-btn {
    padding: 4px 6px;
  }
  #toggle-button-nav .menu-btn-text,
  #universal-nav .login-btn-text {
    display: none;
  }

  #toggle-button-nav .menu-btn-icon,
  #universal-nav .login-btn-icon {
    display: inline-block;
  }
  .toggle-button-nav {
    padding: 2px 8px;
  }
  #universal-nav-logo svg {
    display: block;
    width: auto;
    height: 18px;
    margin: 10px 0;
  }
}
/* ... */

